--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "dependencies": {
+    "@tyriar/fibonacci-heap": "^2.0.9",
     "adm-zip": "^0.5.9",
+    "dsa-ts": "^2.14.0",
     "fs-extra": "^10.0.1",
     "got": "11",
     "js-yaml": "^4.1.0",
-    "prettier": "^2.6.1"
+    "prettier": "^2.6.1",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.34",
     "@types/fs-extra": "^9.0.13",
-    "@types/got": "^9.6.12"
+    "@types/got": "^9.6.12",
+    "@types/js-yaml": "^4.0.5",
+    "tsup": "^5.12.4"
   },
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "ts": "tsup src-ts/test-ts.ts & node dist/test-ts.js",
+    "ts2": "tsup src-ts/index.ts & node dist/index.js",
+    "dev": "npx nodemon --exec \"yarn ts2\""
   }
 }
