--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "start": "tsup src-ts/index.ts & node dist/index.js",
+    "dev": "npx watch \"yarn start\" ./src-ts"
+  },
   "dependencies": {
     "@tyriar/fibonacci-heap": "^2.0.9",
     "adm-zip": "^0.5.9",
@@ -15,11 +19,5 @@
     "@types/got": "^9.6.12",
     "@types/js-yaml": "^4.0.5",
     "tsup": "^6.1.2"
-  },
-  "scripts": {
-    "start": "node src/index.js",
-    "ts": "tsup src-ts/test-ts.ts & node dist/test-ts.js",
-    "ts2": "tsup src-ts/index.ts & node dist/index.js",
-    "dev": "npx watch \"yarn ts2\" ./src-ts"
   }
 }
