--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@tyriar/fibonacci-heap": "^2.0.9",
     "adm-zip": "^0.5.9",
     "dsa-ts": "^2.14.0",
-    "fs-extra": "^10.1.0",
+    "fs-extra": "^11.1.0",
+    "glob": "^9.2.1",
     "got": "11.8.5",
     "js-yaml": "^4.1.0",
+    "jsonpath-plus": "^7.2.0",
     "prettier": "^2.6.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "yaml": "^2.2.1",
+    "yargs": "^17.7.1"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.0",
