--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@tyriar/fibonacci-heap": "^2.0.9",
     "adm-zip": "^0.5.9",
+    "ajv": "^8.12.0",
     "dsa-ts": "^2.14.0",
     "fs-extra": "^11.1.0",
     "glob": "^9.2.1",
