--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "tsup src/index.ts & node dist/index.js",
-    "dev": "npx watch \"yarn start\" ./src"
+    "dev": "npx watch \"yarn start\" ./src",
+    "validate": "node validate.js"
   },
   "dependencies": {
     "@tyriar/fibonacci-heap": "^2.0.9",
@@ -15,6 +16,7 @@
     "jsonpath-plus": "^7.2.0",
     "prettier": "^2.6.1",
     "typescript": "^4.6.3",
+    "typescript-json-schema": "^0.55.0",
     "yaml": "^2.2.1",
     "yargs": "^17.7.1"
   },
