Update CLI implementation to use yargs for argument parsing and enhance project generation logic
- Replaced custom argument parsing with yargs for improved command handling and help text.
- Added new commands for initializing and generating TypeScript types with detailed options.
- Updated package.json and bun.lock to include yargs and its types for better type support.
- Refactored ext-project.ts to streamline template folder management and type copying process.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "vu-ts": "./src/cli.ts"
   },
   "scripts": {
-    "start": "bun src/index.ts",
-    "generate": "bun src/index.ts generate",
-    "dev": "bun --watch src/index.ts",
+    "start": "bun src/cli.ts",
+    "dev": "bun --watch src/cli.ts",
     "validate": "bun validate.js",
     "infer-schema": "bun scripts/infer-schema.ts",
     "yaml-to-ts": "bun scripts/yaml-to-ts-models.ts"
@@ -19,9 +18,11 @@
     "prettier": "^2.6.1",
     "typescript": "^4.6.3",
     "typescript-json-schema": "^0.55.0",
-    "yaml": "^2.2.1"
+    "yaml": "^2.2.1",
+    "yargs": "^18.0.0"
   },
   "devDependencies": {
+    "@types/yargs": "^17.0.35",
     "@typescript-to-lua/language-extensions": "^1.19.0"
   }
 }
