--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yargs": "^18.0.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.3.5",
     "@types/yargs": "^17.0.35",
     "@typescript-to-lua/language-extensions": "^1.19.0"
   }
