Refactor project structure to use .vu-ts directory for configuration and typings
- Updated paths in index.ts and ext-project.ts to store typings and configuration files under a new .vu-ts directory.
- Modified package.json and README to reflect the new directory structure.
- Removed obsolete tsconfig.base.json and related files, consolidating configuration management.
- Adjusted watch script and type reference paths to align with the new structure.

--- a/templates/mod-template/.vu-ts/config/tsconfig.base.json
+++ b/templates/mod-template/.vu-ts/config/tsconfig.base.json
@@ -9,7 +9,8 @@
   },
   "tstl": {
     "luaTarget": "5.1",
-    "luaPlugins": [{ "name": "../../tstl-plugin.js" }]
+    "luaPlugins": [{ "name": "./tstl-plugin.js" }]
   },
   "exclude": ["node_modules"]
 }
+
