--- a/templates/mod-template/ext-ts/tsconfig.json.template
+++ b/templates/mod-template/ext-ts/tsconfig.json.template
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../.vu-ts/config/tsconfig.base.json",
   "compilerOptions": {
     "outDir": "../../ext/{{folder}}",
     "baseUrl": "."{{#if hasSharedPath}},
