--- a/templates/mod-template/package.json.template
+++ b/templates/mod-template/package.json.template
@@ -7,7 +7,7 @@
     "build:client": "tstl -p ext-ts/client/tsconfig.json",
     "build:server": "tstl -p ext-ts/server/tsconfig.json",
     "build:shared": "tstl -p ext-ts/shared/tsconfig.json",
-    "watch": "bun watch.ts",
+    "watch": "bun .vu-ts/scripts/watch.ts",
     "watch:client": "tstl -p ext-ts/client/tsconfig.json --watch",
     "watch:server": "tstl -p ext-ts/server/tsconfig.json --watch",
     "watch:shared": "tstl -p ext-ts/shared/tsconfig.json --watch"
