--- a/templates/mod-template/ext-ts/types.d.ts.template
+++ b/templates/mod-template/ext-ts/types.d.ts.template
@@ -1,4 +1,4 @@
 {{#each types}}
-/// <reference path="../../typings/{{this}}" />
+/// <reference path="../../.vu-ts/typings/{{this}}" />
 {{/each}}
 
