--- a/templates/mod-template/ext-ts/tsconfig.json.template
+++ b/templates/mod-template/ext-ts/tsconfig.json.template
@@ -7,6 +7,6 @@
       "@shared/*": ["../shared/*"]
     }{{/if}}
   },
-  "include": ["./**/*", "./types.d.ts"]
+  "include": ["./**/*", "./types.d.ts"]{{#if isClientOrServer}},
+  "exclude": ["../shared/**/*"]{{/if}}
 }
-
